--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@rollbar/react": "^0.11.0",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
