--- a/.env.local.sample
+++ b/.env.local.sample
@@ -13,3 +13,5 @@ NEXT_PUBLIC_CUSTOMER_PASSWORD=
 
 NEXT_PUBLIC_PAYPAL_EMAIL=
 NEXT_PUBLIC_PAYPAL_PASSWORD=
+
+NEXT_PUBLIC_SHOP_URL=https://app-staging.cyrcool.com/
