--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ NEXT_PUBLIC_BASE_URL=
 NEXT_PUBLIC_SLUG=
 NEXT_PUBLIC_MARKET_ID=
 NEXT_PUBLIC_MARKET_ID_SINGLE_SHIPPING_METHOD=
+NEXT_PUBLIC_MARKET_ID_SHIP_FROM_PRIMARY=
 
 NEXT_PUBLIC_INTEGRATION_CLIENT_ID=
 NEXT_PUBLIC_INTEGRATION_CLIENT_SECRET=
@@ -13,4 +14,5 @@ NEXT_PUBLIC_CUSTOMER_PASSWORD=
 
 NEXT_PUBLIC_PAYPAL_EMAIL=
 NEXT_PUBLIC_PAYPAL_PASSWORD=
+
 NEXT_PUBLIC_SHOP_URL=https://app-staging.cyrcool.com/
