--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "cross-env PORT=5001 NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "eslint ./ --ext .js,.jsx,.tsx,.ts",
@@ -70,6 +70,7 @@
   "dependencies": {
     "@commercelayer/react-components": "^3.13.1-beta.1",
     "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "@rollbar/react": "^0.11.1",
     "async-retry": "^1.3.3",
     "classnames": "^2.3.1",
@@ -107,6 +108,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "autoprefixer": "^10.4.7",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
     "eslint-config-next": "^12.1.6",
