--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ setup: &setup
   - run:
       name: Setup
       command: |
-        sudo npm install -g pnpm
+        npm install -g pnpm
         pnpm install
 
 jobs:
