--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "dotenv": "^16.0.3",
-    "eslint": "^8.23.1",
+    "eslint": "8.23.1",
     "eslint-config-next": "^12.3.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "16.0.3",
