--- a/.env
+++ b/.env
@@ -15,4 +15,4 @@ NEXT_PUBLIC_CUSTOMER_PASSWORD=
 NEXT_PUBLIC_PAYPAL_EMAIL=
 NEXT_PUBLIC_PAYPAL_PASSWORD=
 
-NEXT_PUBLIC_SHOP_URL=https://app-staging.cyrcool.com/
+NEXT_PUBLIC_SHOP_URL=https://app.cyrcool.com/
