removed domain from env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_BASE_PATH=
 NEXT_PUBLIC_SLUG=
-NEXT_PUBLIC_DOMAIN=https://staging-checkout.cyrcool.com
+NEXT_PUBLIC_DOMAIN=
 NEXT_PUBLIC_HOSTED=
 
 E2E_CLIENT_ID=
